--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,20 +1,18 @@
 .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    overflow: hidden;
+    display: flex;                 /* 使用 Flexbox 布局 */
+    flex-wrap: wrap;              /* 允许换行 */
+    justify-content: center;       /* 居中对齐 */
 }
 
 .gallery-item {
-    margin: 10px;
-    text-align: center;
-    flex: 0 0 calc(33.33% - 20px);
-    max-width: calc(33.33% - 20px);
-    overflow: hidden;
+    margin: 10px;                 /* 图片之间的间距 */
+    text-align: center;           /* 文本居中对齐 */
+    flex: 0 0 calc(33.33% - 20px); /* 每行显示三张图片，减去间距 */
+    max-width: calc(33.33% - 20px); /* 确保每个项目的最大宽度 */
 }
 
 .gallery-item img {
-    width: 100%;
-    height: auto;  /* 或设置固定高度 */
-    object-fit: contain;  /* 根据需要使用 'cover' 或 'contain' */
+    width: 100%;                  /* 确保图片宽度填满容器 */
+    height: auto;                 /* 保持图片的纵横比 */
+    object-fit: contain;          /* 确保图片完整显示，不裁剪 */
 }
